--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
             - DATABASE_URL=mysql://root:password@db:3306/mydb
             - DB_HOST=db
             - GIN_MODE=release
+        volumes:
+            - ./.env:/.env:ro
 
     db:
         image: mysql:latest
